Date:    02.01.2025
-------------------------------------------------
Bug fixes:
	- Fixed PHP 8 errors
	- Smarty 3 problem with bootstrap 3 template

Improvements:
	- Compatibility with the xlanguage module
	- Viewing pending documents in the administration
	- Added pending documents to the "Document list (title)" block
	- Changed the redirect message if the document is awaiting validation

Security:
	- /

Important:	- The 1.4.0 series is only compatible under xoops 2.5.11.
			- The default templates are only compatible with a bootstrap 4 theme, the templates for version 3 of boostrap are in the extra folder.

Correction de bogues:
	- Correction d'erreurs PHP 8
	- Problème smarty 3 avec template bootstrap 3

Améliorations:
	- Compatibilité avec le module xlanguage
	- Visualisation des documents en attente dans l'administration
	- Ajout dans le bloc "Liste des documents (titre)" les documents en attente
	- Modification du message de redirection si le document est en attente de validation

Sécurités:
	- /

Important:	- La série 1.4.0 est compatible uniquement sous xoops 2.5.11.
			- Les templates par défaut sont compatibles uniquement avec un thème bootstrap 4, les templates pour la version 3 de boostrap sont dans le dossier extra.

-------------------------------------------------
Version: 1.4.0 Stable
Date:    04.06.2024
-------------------------------------------------
Bug fixes:
	- /

Improvements:
	- Compatibility with smarty 3 (xoops 2.5.11).
	- Addition of a list of documents block (only the title).

Security:
	- /

Important:	- The 1.4.0 series is only compatible under xoops 2.5.11.
			- The default templates are only compatible with a bootstrap 4 theme, the templates for version 3 of boostrap are in the extra folder.

Correction de bogues:
	- /

Améliorations:
	- Compatibilité avec smarty 3 (xoops 2.5.11).
	- Ajout d'un bloc liste de documents (uniquement le titre).

Sécurités:
	- /

Important:	- La série 1.4.0 est compatible uniquement sous xoops 2.5.11.