@@ -56,6 +56,10 @@ define('_MI_XMDOC_PREF_INDEXCAT_C', 'Thumbnail and drop-down list');
 define('_MI_XMDOC_PREF_HEAD_OPTIONS', '<span style="font-size: large;  font-weight: bold;">Options</span>');
 define('_MI_XMDOC_PREF_GENERALUSEMODAL', 'Use a modal window to display the details of the document');
 define('_MI_XMDOC_PREF_GENERALUSEMODAL_DESC', 'Detailed information is displayed in a window on the same page (modal). If the option is no, detailed information is displayed on a dedicated page.');
+define('_MI_XMDOC_PREF_GENERALUSELIST', 'Show documents as a list');
+define('_MI_XMDOC_PREF_GENERALUSELIST_DESC', 'Documents will be displayed as a list. By default they are displayed as thumbnails');
+define('_MI_XMDOC_PREF_GENERALLOGOSIZE', 'Logo width in pixels');
+define('_MI_XMDOC_PREF_GENERALLOGOSIZE_DESC', 'Only valid for list view');
 define('_MI_XMDOC_PREF_GENERALITEMPERPAGE', 'Number of items per page in the general view');
 define('_MI_XMDOC_PREF_XMSOCIAL', 'Use xmsocial module to rate document');
 define('_MI_XMDOC_PREF_XMSOCIAL_DESC', '');
