@@ -56,6 +56,10 @@ define('_MI_XMDOC_PREF_INDEXCAT_C', 'Vignette et liste déroulante');
 define('_MI_XMDOC_PREF_HEAD_OPTIONS', '<span style="font-size: large;  font-weight: bold;">Options</span>');
 define('_MI_XMDOC_PREF_GENERALUSEMODAL', 'Utiliser une fenêtre "modal" pour afficher les détails du document');
 define('_MI_XMDOC_PREF_GENERALUSEMODAL_DESC', 'Les informations détaillées sont affichées dans une fenêtre sur la même page (modal). Si l\'option est non, les informations détaillées sont affichées sur une page dédiée.');
+define('_MI_XMDOC_PREF_GENERALUSELIST', 'Afficher les documents sous forme de liste');
+define('_MI_XMDOC_PREF_GENERALUSELIST_DESC', 'Les documents seront affichés sous forme de liste. Par défaut ils sont affichés sous forme de vignette');
+define('_MI_XMDOC_PREF_GENERALLOGOSIZE', 'Largeur du logo en pixel');
+define('_MI_XMDOC_PREF_GENERALLOGOSIZE_DESC', 'Uniquement valable pour l\'affichage sous forme de liste');
 define('_MI_XMDOC_PREF_GENERALITEMPERPAGE', 'Nombre d\'éléments par page dans la vue générale');
 define('_MI_XMDOC_PREF_XMSOCIAL', 'Utilisez le module xmsocial pour évaluer les documents');
 define('_MI_XMDOC_PREF_XMSOCIAL_DESC', '');
